--- a/ui.html
+++ b/ui.html
@@ -1,171 +1,101 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8" />
   <style>
-    body {
-      font-family: sans-serif;
-      margin: 16px;
-    }
-    .top-bar {
-      display: flex;
-      justify-content: space-between;
-      margin-bottom: 8px;
-    }
-    .search-bar {
-      margin-bottom: 8px;
-    }
-    .grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
-      gap: 12px;
-    }
-    .card {
-      border: 1px solid #ddd;
-      padding: 8px;
-      text-align: center;
-      border-radius: 4px;
-      transition: 0.2s;
-      background: #fff;
-      position: relative;
-    }
-    .card:hover {
-      background: #f2f2f2;
-      cursor: pointer;
-    }
-    .brand-name {
-      font-weight: bold;
-    }
-    .checkbox-container {
-      position: absolute;
-      top: 8px;
-      left: 8px;
-    }
+    body { font-family: Arial, sans-serif; padding: 10px; }
+    #search { width: 100%; padding: 5px; margin-bottom: 10px; }
+    #grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(100px, 1fr)); gap: 10px; }
+    .grid-item { text-align: center; cursor: pointer; padding: 5px; border: 1px solid #ccc; }
+    .grid-item img { max-width: 50px; max-height: 50px; }
+    #replaceButton { display: none; width: 100%; padding: 10px; margin-top: 10px; }
+    #loading { text-align: center; }
   </style>
 </head>
 <body>
-  <div class="top-bar">
-    <!-- Links: Button zum Ersetzen -->
-    <button id="replaceBtn">Daten ersetzen</button>
-
-    <!-- Rechts: Button zum Reloaden -->
-    <button id="reloadBtn">Reload Data</button>
-  </div>
-
-  <!-- Suchfeld -->
-  <div class="search-bar">
-    <input type="text" id="searchInput" placeholder="Suche..." style="width: 100%; padding: 6px;" />
-  </div>
-
-  <!-- Grid -->
-  <div id="grid" class="grid"></div>
-
+  <div id="loading">Loading data...</div>
+  <input type="text" id="search" placeholder="Search customers..." oninput="filterGrid()" style="display: none;" disabled>
+  <div id="grid" style="display: none;"></div>
+  <button id="replaceButton" onclick="replaceRandom()">Replace with Data</button>
   <script>
-    let allCustomers = [];         // Original-Daten (JSON)
-    let filteredCustomers = [];    // Gefilterte Liste nach Suche
-    let selectedBrandIds = [];     // Vom User angekreuzte Brands (Checkbox)
-
-    // Nachrichten aus Plugin empfangen
-    window.onmessage = (event) => {
-      const msg = event.data.pluginMessage;
-      if (!msg) return;
-
-      if (msg.type === "showData") {
-        // Daten empfangen
-        allCustomers = msg.data;
-        filteredCustomers = allCustomers.slice(); // Kopie
-        selectedBrandIds = [];
-        renderGrid(filteredCustomers);
-      }
-    };
-
-    // Reload Button
-    document.getElementById("reloadBtn").onclick = () => {
-      parent.postMessage({ pluginMessage: { type: "reload-data" } }, "*");
-    };
-
-    // Replace Button
-    // -> Verwendet die angehakten Brands, 
-    //    oder, wenn keine angehakt, macht "random / name-based" (im Plugin-Code)
-    document.getElementById("replaceBtn").onclick = () => {
-      parent.postMessage({
-        pluginMessage: {
-          type: "replace-multi",
-          brandIds: selectedBrandIds
-        }
-      }, "*");
-    };
-
-    // Suchfeld
-    document.getElementById("searchInput").oninput = function(e) {
-      const searchVal = e.target.value.toLowerCase().trim();
-      filteredCustomers = allCustomers.filter(item =>
-        (item.id && item.id.toLowerCase().includes(searchVal)) ||
-        (item.name && item.name.toLowerCase().includes(searchVal))
-      );
-      renderGrid(filteredCustomers);
-    };
-
-    // Render-Funktion
-    function renderGrid(customers) {
-      const grid = document.getElementById("grid");
-      grid.innerHTML = "";
-
-      customers.forEach(customer => {
-        const card = document.createElement("div");
-        card.className = "card";
-
-        // Checkbox
-        const checkboxContainer = document.createElement("div");
-        checkboxContainer.className = "checkbox-container";
-        const checkbox = document.createElement("input");
-        checkbox.type = "checkbox";
-        checkbox.checked = selectedBrandIds.includes(customer.id);
-        // Klick auf Checkbox => NICHT das Single-Replace auslösen,
-        // sondern in "selectedBrandIds" toggeln
-        checkbox.onclick = (ev) => {
-          ev.stopPropagation(); // Verhindert, dass wir das Card-Onclick auslösen
-          if (checkbox.checked) {
-            // Hinzufügen
-            if (!selectedBrandIds.includes(customer.id)) {
-              selectedBrandIds.push(customer.id);
-            }
-          } else {
-            // Entfernen
-            selectedBrandIds = selectedBrandIds.filter(id => id !== customer.id);
-          }
+    let jsonData = [];
+    let filteredData = [];
+    async function urlToPng(url) {
+      return new Promise((resolve) => {
+        const img = new Image();
+        img.crossOrigin = 'Anonymous';
+        img.onload = () => {
+          const canvas = document.createElement('canvas');
+          const width = img.naturalWidth || 100;
+          const height = img.naturalHeight || 100;
+          canvas.width = width;
+          canvas.height = height;
+          const ctx = canvas.getContext('2d');
+          ctx.drawImage(img, 0, 0, width, height);
+          resolve(canvas.toDataURL('image/png'));
         };
-        checkboxContainer.appendChild(checkbox);
-
-        // Logo
-        const img = document.createElement("img");
-        img.src = customer.logo;
-        img.alt = customer.name || customer.id;
-
-        // Name
-        const brandName = document.createElement("div");
-        brandName.className = "brand-name";
-        brandName.innerText = customer.name || customer.id;
-
-        // Zusammensetzen
-        card.appendChild(checkboxContainer);
-        card.appendChild(img);
-        card.appendChild(brandName);
-
-        // Klick auf die Karte (außerhalb der Checkbox)
-        // => "replace-with-brand" = Single Replacement
-        card.onclick = () => {
-          parent.postMessage({
-            pluginMessage: {
-              type: "replace-with-brand",
-              brandId: customer.id
-            }
-          }, "*");
+        img.onerror = () => {
+          console.error(`Fehler beim Laden des Bildes: ${url}`);
+          resolve('');
         };
-
-        grid.appendChild(card);
+        img.src = url;
       });
     }
+    async function loadJson() {
+      try {
+        const response = await fetch('https://raw.githubusercontent.com/Weltraumakustik/figma-placeholder-data/refs/heads/main/data/json/customers.json');
+        if (!response.ok) throw new Error(`HTTP-Fehler: ${response.status}`);
+        jsonData = await response.json();
+        for (let i = 0; i < jsonData.length; i++) {
+          if (jsonData[i].logo) {
+            jsonData[i].logoPng = await urlToPng(jsonData[i].logo);
+          }
+        }
+        filteredData = [...jsonData];
+        renderGrid();
+        document.getElementById('loading').style.display = 'none';
+        document.getElementById('search').style.display = 'block';
+        document.getElementById('search').disabled = false;
+        document.getElementById('grid').style.display = 'block';
+        parent.postMessage({ pluginMessage: { type: 'json-loaded', data: jsonData } }, '*');
+      } catch (error) {
+        console.error('Fehler beim Laden:', error);
+        parent.postMessage({ pluginMessage: { type: 'notify', message: `Fehler beim Laden der Daten: ${error.message}` } }, '*');
+        document.getElementById('loading').textContent = 'Fehler beim Laden der Daten!';
+      }
+    }
+    function filterGrid() {
+      const searchTerm = document.getElementById('search').value.toLowerCase();
+      filteredData = jsonData.filter(item => item.name.toLowerCase().includes(searchTerm));
+      renderGrid();
+    }
+    function renderGrid() {
+      const grid = document.getElementById('grid');
+      grid.innerHTML = '';
+      filteredData.forEach((item, index) => {
+        const gridItem = document.createElement('div');
+        gridItem.className = 'grid-item';
+        gridItem.innerHTML = `<img src="${item.logoPng || ''}" alt="Logo"><div>${item.name}</div>`;
+        gridItem.onclick = () => {
+          parent.postMessage({ pluginMessage: { type: 'replace-single', index } }, '*');
+        };
+        grid.appendChild(gridItem);
+      });
+    }
+    function replaceRandom() {
+      parent.postMessage({ pluginMessage: { type: 'replace-random' } }, '*');
+    }
+    window.onmessage = (event) => {
+      const msg = event.data.pluginMessage;
+      if (msg.type === 'notify') {
+        alert(msg.message);
+      } else if (msg.type === 'selection-changed') {
+        const replaceButton = document.getElementById('replaceButton');
+        replaceButton.style.display = msg.multiple ? 'block' : 'none';
+        document.getElementById('grid').style.display = msg.multiple ? 'none' : 'block';
+        document.getElementById('search').style.display = msg.multiple ? 'none' : 'block';
+      }
+    };
+    loadJson();
   </script>
 </body>
 </html>
